<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

    </group>
    <item android:title="Hesap">
        <menu>
            <item
                android:id="@+id/nav_profil"
                android:icon="@drawable/ic_baseline_account_box_24"
                android:title="@string/menu_profil" />
            <item
                android:id="@+id/nav_giris"
                android:icon="@drawable/ic_baseline_giris_24"
                android:title="@string/menu_giris" />
            <item
                android:id="@+id/nav_kayit"
                android:icon="@drawable/ic_baseline_kayit_24"
                android:title="@string/menu_kayit" />
            <item
                android:id="@+id/nav_cikis"
                android:icon="@drawable/ic_baseline_account_box_24"
                android:title="@string/menu_cikis" />



        </menu>

    </item>

    <item android:title="Zula Genel">
        <menu>
            <item
                android:id="@+id/nav_karakterler"
                android:icon="@drawable/ic_baseline_account_box_24"
                android:title="Karakterler" />



        </menu>

    </item>
</menu>